deploy/overlays/prod/frontend/ingress-tailscale.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: questify
  namespace: default
spec:
  ingressClassName: tailscale
  rules:
    - host: questify
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: questify-frontend
                port:
                  number: 80
    - host: questify.tail03c40b.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: questify-frontend
                port:
                  number: 80
  tls:
    - hosts:
        - questify
        - questify.tail03c40b.ts.net
